--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ div.overlay {
 .scene-container {
   margin-bottom: 3rem;
   margin-bottom: 3rem;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   width: 100%;
 }
