--- a/src/components/TimeSlots.css
+++ b/src/components/TimeSlots.css
@@ -25,6 +25,16 @@
 }
 .time-block > div:nth-child(2) .reservation {
     width: 300px;
+    max-width: 100%;
+}
+
+@media screen and (max-width: 400px) {
+    .time-block > div:first-child .reservation {
+        width: 275px;
+    }
+    .time-block > div:nth-child(2) .reservation {
+        width: 275px;
+    }
 }
 
 .time-slot-row {
